lab1/Test/L1-A-5-83.cmm
struct tUx6ZVAlksT4p5Gagat {
}wnNYnHtYiGlb7X 54591258 ] 
;
struct {
}WLjhoLJl ( int YPSueDntdN20c5INOn ) {
{
    int ACLYzdULVRYrrprS 
  }}
int d6lR9nJKDaBApXv ( :struct MyTUAN7SP_0Iwn {
}JWmqcc1NqC09 ) {
  struct KI7GMD9Ze6osc2 {
  }fhP33SlLLBVjt0OL = yQIpsoRgIGnL , XpPinQYdsS3pmL4iG 
    ;
}
float L_7FSS87zsDym ( struct giMPabQ2 SUEqUuF942sHlmP 
  ) '{
}
float vqNxtNt5jojkw__82 ( ) }
int xqgVv4 
;
